Add text to logo

--- a/shpesfba/templates/shpesfba/base.html
+++ b/shpesfba/templates/shpesfba/base.html
@@ -21,8 +21,7 @@
     <div class="container">
         <div id="logo" class="pull-left">
             <a href="index.html"><img src="/static/img/nav_logo.png"></a>
-            <!-- Uncomment below if you prefer to use a text image -->
-            <!--<h1><a href="#hero">Bell</a></h1>-->
+            <a id="logo-text">San Francisco Bay Area</a>
         </div>
         <nav id="nav-menu-container">
             <ul class="nav-menu">
