--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -10,24 +10,17 @@
   margin: 14px 25px 0 0;
 }
 
-#header #logo h1 {
-  font-size: 36px;
-  margin: 0;
-  padding: 2px 0;
-  line-height: 1;
-  font-weight: 700;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-}
-
-#header #logo h1 a, #header #logo h1 a:hover {
-  color: #337ab7;
-}
-
 #header #logo img {
   padding: 0;
   margin: 0;
   max-height: 40px;
+}
+
+#header #logo-text {
+  font-size: 16px;
+  font-weight: 700;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 @media (max-width: 768px) {
@@ -36,10 +29,6 @@
   }
   #header #logo {
     margin: 10px 0 0 0;
-  }
-  #header #logo h1 {
-    padding: 2px 0;
-    font-size: 26px;
   }
   #header #logo img {
     max-height: 30px;
@@ -53,11 +42,11 @@
 #header .social-nav a {
   font-size: 24px;
   margin-left: 15px;
-  color: #909090;
+  color: rgba(144, 144, 144, 0.8);
 }
 
 #header .social-nav a:hover {
-  color: #337ab7;
+  color: rgba(51, 122, 183, 0.9);
 }
 
 /*--------------------------------------------------------------
@@ -136,7 +125,7 @@
   text-decoration: none;
   display: inline-block;
   color: #909090;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 15px;
   outline: none;
 }
