--- a/shpesfba/templates/shpesfba/base.html
+++ b/shpesfba/templates/shpesfba/base.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <title>{% block title %}{% endblock %} - SHPE SF Bay Area</title>
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}"/>
-    <link rel="stylesheet" href="{% static "css/shpe.css" %}?v=2"/>
+    <link rel="stylesheet" href="{% static "css/shpe.css" %}?v=1"/>
     <link rel="stylesheet" href="{% static "css/nav.css" %}?"/>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Candal|Alegreya+Sans">
     <link rel="stylesheet" href="/static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -20,17 +20,16 @@
 <header id="header">
     <div class="container">
         <div id="logo" class="pull-left">
-            <a href="index.html"><img src="/static/img/nav_logo.png"></a>
-            <a id="logo-text">San Francisco Bay Area</a>
+            <a href="{% url 'index' %}"><img src="/static/img/nav_logo.png"></a>
+            <a id="logo-text" href="{% url 'index' %}">San Francisco Bay Area</a>
         </div>
         <nav id="nav-menu-container">
             <ul class="nav-menu">
-                <li class="{% nav_active 'index' 'active' %}"><a href="/">Home</a></li>
+                <li class="{% nav_active 'about' 'active' %}"><a href="{% url "about" %}">About</a></li>
                 <li class="{% nav_active 'membership' 'active' %}"><a href="{% url "membership" %}">Membership</a></li>
                 <li class="{% nav_active 'calendar' 'active' %}"><a href="{% url "calendar" %}">Calendar</a></li>
-                <li class="{% nav_active 'jobs' 'active' %}"><a href="{% url "jobs" %}">Job Listings</a></li>
-                <li class="{% nav_active 'gallery' 'active' %}"><a href="{% url "gallery" %}">Gallery</a></li>
-                <li class="{% nav_active 'about' 'active' %}"><a href="{% url "about" %}">About</a></li>
+                <li class="{% nav_active 'jobs' 'active' %} hidden-sm"><a href="{% url "jobs" %}">Job Listings</a></li>
+                <!-- <li class="{% nav_active 'gallery' 'active' %} hidden-sm"><a href="{% url "gallery" %}">Gallery</a></li> -->
                 <li class="{% nav_active 'contact' 'active' %}"><a href="{% url "contact" %}">Contact</a></li>
             </ul>
         </nav>
@@ -39,7 +38,7 @@
             <a href="https://join.slack.com/t/shpe-sfba/shared_invite/MjI0OTQ2MDAxOTc0LTE1MDIyNDUxNTctMGRkZDRiYmJlNg" target="_blank"><i class="fa fa-slack" aria-hidden="true"></i></a>
             <a href="https://www.instagram.com/shpesfba/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://www.youtube.com/channel/UC0QS07EGUIa1ZIsyjAJtBfg" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
-            <a href="{% url "contact" %}" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+            <a href="{% url "contact" %}"><i class="fa fa-envelope" aria-hidden="true"></i></a>
         </nav>
     </div>
 </header>
