--- a/shpesfba/templates/shpesfba/base.html
+++ b/shpesfba/templates/shpesfba/base.html
@@ -8,8 +8,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <title>{% block title %}{% endblock %} - SHPE SF Bay Area</title>
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}"/>
-    <link rel="stylesheet" href="{% static "css/shpe.css" %}?v=1"/>
-    <link rel="stylesheet" href="{% static "css/nav.css" %}?"/>
+    <link rel="stylesheet" href="{% static "css/shpe.css" %}?v=2"/>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Candal|Alegreya+Sans">
     <link rel="stylesheet" href="/static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 
@@ -25,12 +24,21 @@
         </div>
         <nav id="nav-menu-container">
             <ul class="nav-menu">
-                <li class="{% nav_active 'about' 'active' %}"><a href="{% url "about" %}">About</a></li>
-                <li class="{% nav_active 'membership' 'active' %}"><a href="{% url "membership" %}">Membership</a></li>
-                <li class="{% nav_active 'calendar' 'active' %}"><a href="{% url "calendar" %}">Calendar</a></li>
-                <li class="{% nav_active 'jobs' 'active' %} hidden-sm"><a href="{% url "jobs" %}">Job Listings</a></li>
-                <!-- <li class="{% nav_active 'gallery' 'active' %} hidden-sm"><a href="{% url "gallery" %}">Gallery</a></li> -->
-                <li class="{% nav_active 'contact' 'active' %}"><a href="{% url "contact" %}">Contact</a></li>
+                <li class="{% nav_active 'about' 'active' %} menu-has-children"><a href="{% url 'about' %}">About <span class="caret hidden-xs"></span></a>
+                    <ul>
+                        <li><a href="{% url 'about.executive-board' %}">Executive Board</a></li>
+                        <li><a href="{% url 'about.awards' %}">Awards and Honors</a></li>
+                        <li><a href="{% url 'gallery' %}">Gallery</a></li>
+                        <li><a href="{% url 'about.past-events' %}">Past Events</a></li>
+                        <li><a href="{% url 'about.chapter' %}">Chapter History</a></li>
+                        <li><a href="{% url 'about.bylaws' %}">Bylaws</a></li>
+                        <li><a href="{% url 'about.shpe' %}">SHPE Inc.</a></li>
+                    </ul>
+                </li>
+                <li class="{% nav_active 'membership' 'active' %}"><a href="{% url 'membership' %}">Membership</a></li>
+                <li class="{% nav_active 'calendar' 'active' %}"><a href="{% url 'calendar' %}">Calendar</a></li>
+                <li class="{% nav_active 'jobs' 'active' %} hidden-sm"><a href="{% url 'jobs' %}">Job Listings</a></li>
+                <li class="{% nav_active 'contact' 'active' %}"><a href="{% url 'contact' %}">Contact</a></li>
             </ul>
         </nav>
         <nav class="nav social-nav pull-right hidden-sm hidden-xs">
