Add responsive code for Google Calendar

--- a/shpesfba/templates/shpesfba/calendar.html
+++ b/shpesfba/templates/shpesfba/calendar.html
@@ -11,11 +11,12 @@
 
     <div class="container">
         <div class="col-md-12">
-      <h1>Calendar of Events</h1>
-      <div class="text-center">
-<iframe src="https://calendar.google.com/calendar/embed?title=SHPE%20SFBA%20Calendar%20of%20Events&amp;showTitle=0&amp;showTabs=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=sfbashpe%40gmail.com&amp;color=%231B887A&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="1000" height="600" frameborder="0" scrolling="no"></iframe>
-</div>
-         </div>
-   </div>
+            <h1>Calendar of Events</h1>
+            <div class="google-calendar">
+                <iframe src="https://calendar.google.com/calendar/embed?title=SHPE%20SFBA%20Calendar%20of%20Events&amp;showTitle=0&amp;showTabs=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=sfbashpe%40gmail.com&amp;color=%231B887A&amp;ctz=America%2FLos_Angeles"
+                    style="border-width:0" width="1000" height="600" frameborder="0" scrolling="no"></iframe>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
