Add Announcements instead of Get in Touch on homepage

--- a/shpesfba/templates/shpesfba/home.html
+++ b/shpesfba/templates/shpesfba/home.html
@@ -91,20 +91,13 @@
                 </p>
             </div>
             <div class="col-sm-12 col-md-6 text-center">
-                <h1 class="text-center">Get in Touch</h1>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <a class="btn btn-default btn-shpe" href="https://www.facebook.com/groups/120819351271743/" target="_blank" data-toggle="tooltip" title="Facebook"><i class="fa fa-lg fa-facebook-official" aria-hidden="true"></i></a>
-                        <a class="btn btn-default btn-shpe" href="https://www.instagram.com/shpesfba/" target="_blank" data-toggle="tooltip" title="Instagram"><i class="fa fa-lg fa-instagram" aria-hidden="true"></i></a>
-                        <a class="btn btn-default btn-shpe" href="https://join.slack.com/t/shpe-sfba/shared_invite/MjI0OTQ2MDAxOTc0LTE1MDIyNDUxNTctMGRkZDRiYmJlNg" target="_blank" data-toggle="tooltip" title="Slack"><i class="fa fa-lg fa-slack" aria-hidden="true"></i></a>
-                        <a class="btn btn-default btn-shpe" href="{% url "contact.mailing-list" %}" data-toggle="tooltip" title="Join Mailing List"><i class="fa fa-lg fa-envelope-o" aria-hidden="true"></i></a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <a class="btn btn-default btn-shpe" href="{% url "membership" %}">Become a Member</a>
-                    </div>
-                </div>
+                <h1 class="text-center">Announcements</h1>
+                        <p>We now have a Slack group! Join us if interested in receiving the latest updates and having all officers within quick reach.
+                            The platform can also be used to ask questions, look at job postings, and communicate with the rest of the chapter.
+                        </p>
+                        <a class="btn btn-default btn-shpe" href="https://join.slack.com/t/shpe-sfba/shared_invite/MjI0OTQ2MDAxOTc0LTE1MDIyNDUxNTctMGRkZDRiYmJlNg" target="_blank" data-toggle="tooltip" title="Slack">
+                            <i class="fa fa-lg fa-slack" aria-hidden="true" style="padding-right:5px;"></i> Join Slack
+                        </a>
             </div>
         </div>
     </div>
