Add new footer design

--- a/shpesfba/templates/shpesfba/home.html
+++ b/shpesfba/templates/shpesfba/home.html
@@ -95,7 +95,7 @@
                         <p>We now have a Slack group! Join us if interested in receiving the latest updates and having all officers within quick reach.
                             The platform can also be used to ask questions, look at job postings, and communicate with the rest of the chapter.
                         </p>
-                        <a class="btn btn-default btn-shpe" href="https://join.slack.com/t/shpe-sfba/shared_invite/MjI0OTQ2MDAxOTc0LTE1MDIyNDUxNTctMGRkZDRiYmJlNg" target="_blank" data-toggle="tooltip" title="Slack">
+                        <a class="btn btn-default btn-shpe" href="https://join.slack.com/t/shpe-sfba/shared_invite/MjI0OTQ2MDAxOTc0LTE1MDIyNDUxNTctMGRkZDRiYmJlNg" target="_blank">
                             <i class="fa fa-lg fa-slack" aria-hidden="true" style="padding-right:5px;"></i> Join Slack
                         </a>
             </div>
