--- a/shpesfba/templates/shpesfba/memberships.html
+++ b/shpesfba/templates/shpesfba/memberships.html
@@ -22,6 +22,59 @@
             </div>
         </div>
         <div class="row">
+            <div class="col-md-12">
+                <h4 class="text-center" style="margin-bottom:30px;">Membership Benefits</h4>
+                <div class="row">
+                    <div class="col-sm-12 col-md-3">
+                        <p class="text-center">
+                            <i class="fa fa-5x fa-money" aria-hidden="true"></i>
+                        </p>
+                        <h4 class="text-center">Scholarships and Fellowships</h4>
+                        <ul>
+                            <li>More than $500,000 in scholarship offerings</li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-12 col-md-3">
+                        <p class="text-center">
+                            <i class="fa fa-5x fa-handshake-o" aria-hidden="true"></i>
+                        </p>
+                        <h4 class="text-center">Employment Opportunities</h4>
+                        <ul>
+                            <li>Internship, fellowships & co-op opportunities</li>
+                            <li>Exclusive access to the SHPE Career Center where you can share your résumé with top employers and search
+                                for job openings</li>
+                            <li>Tips on résumé writing and interview skills</li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-12 col-md-3">
+                        <p class="text-center">
+                            <i class="fa fa-5x fa-address-book-o" aria-hidden="true"></i>
+                        </p>
+                        <h4 class="text-center">Networking Opportunities</h4>
+                        <ul>
+                            <li>Meet other members at various social and professional mixers</li>
+                            <li>Interact with company representatives at corporate events</li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-12 col-md-3">
+                        <p class="text-center">
+                            <i class="fa fa-5x fa-user-o" aria-hidden="true"></i>
+                        </p>
+                        <h4 class="text-center">Leadership Development</h4>
+                        <p>Professional, career, & leadership training offered at our various events:</p>
+                        <ul>
+                            <li>Annual SHPE National Conference</li>
+                            <li>National Institute for Leadership Advancement (NILA)</li>
+                            <li>Regional Leadership Development Conferences (RLDC)</li>
+                            <li>Management Growth Training (MGT)</li>
+                            <li>Executive Leadership Institute (ELI)</li>
+                            <li>Discounted registration to SHPE National, Regional & Local events</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h4 class="text-center">Membership Types</h4>
                 <div class="panel-group panel-wrap" id="accordion" role="tablist" aria-multiselectable="true">
@@ -41,50 +94,6 @@
                         </div>
                     </div>
                     {% endfor %} 
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <h4 class="text-center">Membership Benefits</h4>
-                <div class="row">
-                    <div class="col-sm-12 col-md-3">
-                        <p class="text-center"><i class="fa fa-5x fa-money" aria-hidden="true"></i></p>
-                        <h4 class="text-center">Scholarships and Fellowships</h4>
-                        <ul>
-                            <li>More than $500,000 in scholarship offerings</li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-12 col-md-3">
-                        <p class="text-center"><i class="fa fa-5x fa-handshake-o" aria-hidden="true"></i></p>
-                        <h4 class="text-center">Employment Opportunities</h4>
-                        <ul>
-                            <li>Internship, fellowships & co-op opportunities</li>
-                            <li>Exclusive access to the SHPE Career Center where you can share your résumé with top employers and search for job openings</li>
-                            <li>Tips on résumé writing and interview skills</li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-12 col-md-3">
-                        <p class="text-center"><i class="fa fa-5x fa-address-book-o" aria-hidden="true"></i></p>
-                        <h4 class="text-center">Networking Opportunities</h4>
-                        <ul>
-                            <li>Meet other members at various social and professional mixers</li>
-                            <li>Interact with company representatives at corporate events</li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-12 col-md-3">
-                        <p class="text-center"><i class="fa fa-5x fa-user-o" aria-hidden="true"></i></p>
-                        <h4 class="text-center">Leadership Development</h4>
-                        <p>Professional, career, & leadership training offered at our various events:</p>
-                        <ul>
-                            <li>Annual SHPE National Conference</li>
-                            <li>National Institute for Leadership Advancement (NILA)</li>
-                            <li>Regional Leadership Development Conferences (RLDC)</li>
-                            <li>Management Growth Training (MGT)</li>
-                            <li>Executive Leadership Institute (ELI)</li>
-                            <li>Discounted registration to SHPE National, Regional & Local events</li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </div>
