Add new banner image in about page

--- a/shpesfba/templates/shpesfba/about.shpesfba.html
+++ b/shpesfba/templates/shpesfba/about.shpesfba.html
@@ -3,10 +3,10 @@
 {% block title %}
     About SHPE SFBA
 {% endblock %}
-{% block headline_class %}about-header{% endblock %}
 {% block about_content %}
     <div class="row">
         <div class="col-md-12">
+            <img class="img-responsive" src="/static/img/about/breakfast-engineers.jpg" />
             <h1><a id="About_SHPE_SFBA_0"></a>About SHPE SFBA</h1>
             <p>The San Francisco Bay Area SHPE Chapter was founded on June 14, 1983
                 with the mission to fulfill the goals of the SHPE organization by
