--- a/shpesfba/templates/shpesfba/about.awards.html
+++ b/shpesfba/templates/shpesfba/about.awards.html
@@ -7,6 +7,7 @@
 <ul>
    <li>2016-2017
       <ul>
+        <li>Region 1 Chapter of the Year</li>
          <li>Blue Chip Award</li>
       </ul>
    </li>
