--- a/shpesfba/templates/shpesfba/about.awards.html
+++ b/shpesfba/templates/shpesfba/about.awards.html
@@ -5,6 +5,11 @@
 {% block about_content %}
 <h1>Awards and Honors</h1>
 <ul>
+    <li>2017-2018
+        <ul>
+            <li>Blue Chip Award</li>
+        </ul>
+    </li>
    <li>2016-2017
       <ul>
         <li>Region 1 Chapter of the Year</li>
